# i

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.builds/: debricked.yml  rust.yml
.github/workflows/: docker.yml  rust.yml
client-side/: icp  screenshot-open.sh  screenshot.sh  upload-with-i.desktop  wayland-screenshot-open.sh
src/: delete.rs  helpers.rs  main.rs  recent.rs  thumbnail.rs  upload.rs
templates/: notfound.html  recent.html
