[package]
name = "i"
version = "2.1.0"
authors = ["Linus Karlsson <linus@zozs.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = [ "with-axum" ] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive", "env"] }
futures = "0.3.30"
image = "0.25.1"
log = "0.4.22"
rand = "0.8.5"
sanitize-filename = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"

# tower-http only needed for fs

[dev-dependencies]
http-body-util = { version = "0.1.2" }
