[package]
name = "i"
version = "2.1.1"
authors = ["Linus Karlsson <linus@zozs.se>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14.0", features = [ ] }
askama_web = { version = "0.14.0", features = ["axum-0.8"] }
axum = { version = "0.8.3", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive", "env"] }
futures = "0.3.31"
image = "0.25.6"
log = "0.4.27"
rand = "0.9.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

# tower-http only needed for fs

[dev-dependencies]
http-body-util = { version = "0.1.3" }
