[package]
name = "i"
version = "2.2.3"
authors = ["Linus Karlsson <linus@zozs.se>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.15", features = [ ] }
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum = { version = "0.8.7", features = ["multipart"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures = "0.3.31"
image = "0.25.9"
log = "0.4.28"
rand = "0.10"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

# tower-http only needed for fs

[dev-dependencies]
http-body-util = { version = "0.1.3" }
